tests/error/not_enough_inputs_2.ca

def f(int a, b :multiple)
    print('a = ' a)
    print('b = ' b)

f(1, 2)
f()
